# ai-guardian-remediation

./: .gitignore  Dockerfile  Dockerfile.multistage  Makefile  README.md  pyproject.toml
.github/workflows/: build-image.yml
manifests/: deployment.yaml  service.yaml
src/ai_guardian_remediation/: config.py  main.py
src/ai_guardian_remediation/api/: cve_remediation.py  sast_remediation.py
src/ai_guardian_remediation/common/: db_manager.py  email_manager.py  event_streamer.py  git_manager.py  utils.py
src/ai_guardian_remediation/common/providers/: github_provider.py
src/ai_guardian_remediation/common/scheduler/: core.py  task.py  task_cleanup.py
src/ai_guardian_remediation/common/scm_providers/: base.py  github.py
src/ai_guardian_remediation/core/agents/cve_remediation/: __init__.py  base.py  factory.py
src/ai_guardian_remediation/core/agents/cve_remediation/claude_code/: agent.py  prompts.py
src/ai_guardian_remediation/core/agents/sast_remediation/: __init__.py  base.py  factory.py
src/ai_guardian_remediation/core/agents/sast_remediation/claude_code/: agent.py  prompts.py
src/ai_guardian_remediation/services/: cve_remediation.py  cve_remediation_service.py  db.py  sast_remediation.py  sast_remediation_service.py
src/ai_guardian_remediation/storage/db/: db.py  remediation.py
