[project]
name = "ai-guardian-remediation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shraddhaopsmx", email = "shraddha.singh@opsmx.io" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
]

[project.scripts]
ai-guardian-remediation = "ai_guardian_remediation:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
