[project]
name = "ai-guardian-remediation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shraddhaopsmx", email = "shraddha.singh@opsmx.io" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "claude-code-sdk (>=0.0.20,<0.0.21)",
    "cryptography (>=45.0.6,<46.0.0)"
]

[project.scripts]
ai-guardian-remediation = "ai_guardian_remediation:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
